[package]
name = "gdip_snapshot"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_GdiPlus",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
	"Win32_System_Com"
] }

[build-dependencies]
embed-manifest = "1"
